@@ -1,16 +1,7 @@
-./usr/sbin/ctermd
 ./usr/sbin/fal
-./usr/sbin/dnetnml
-./usr/sbin/rmtermd
 ./usr/sbin/vmsmaild
 ./usr/sbin/sendvmsmail
-./usr/sbin/phoned
 ./usr/sbin/dnetd
-./usr/sbin/dnroute
-./usr/sbin/dnetinfo
-./usr/sbin/dneigh
-./usr/sbin/multinet
-./usr/sbin/dncopynodes
 ./sbin/mount.dapfs
 ./usr/bin/dndir
 ./usr/bin/dnsubmit
@@ -18,42 +9,27 @@
 ./usr/bin/dndel
 ./usr/bin/dncopy
 ./usr/bin/dntype
-./usr/bin/sethost
-./usr/bin/dnping
 ./usr/bin/dnlogin
 ./usr/bin/dntask
 ./usr/bin/dnetcat
 ./usr/bin/dnetstat
-./usr/bin/phone
 ./usr/share/doc/dnet-progs/dnetd.README
 ./usr/share/doc/dnet-progs/mail.README
 ./usr/share/doc/dnet-progs/phone.README
 ./usr/share/doc/dnet-progs/fal.README
 ./usr/share/man/man8/sendvmsmail.8
-./usr/share/man/man8/phoned.8
 ./usr/share/man/man8/dnetd.8
-./usr/share/man/man8/ctermd.8
-./usr/share/man/man8/rmtermd.8
 ./usr/share/man/man8/fal.8
-./usr/share/man/man8/dnetnml.8
 ./usr/share/man/man8/vmsmaild.8
-./usr/share/man/man8/dnroute.8
-./usr/share/man/man8/dnetinfo.8
-./usr/share/man/man8/dneigh.8
-./usr/share/man/man8/multinet.8
-./usr/share/man/man8/dncopynodes.8
 ./usr/share/man/man8/mount.dapfs.8
 ./usr/share/man/man5/vmsmail.conf.5
 ./usr/share/man/man1/dndel.1
 ./usr/share/man/man1/dncopy.1
 ./usr/share/man/man1/dndir.1
-./usr/share/man/man1/sethost.1
-./usr/share/man/man1/dnping.1
 ./usr/share/man/man1/dnlogin.1
 ./usr/share/man/man1/dntype.1
 ./usr/share/man/man1/dnprint.1
 ./usr/share/man/man1/dntask.1
 ./usr/share/man/man1/dnetcat.1
 ./usr/share/man/man1/dnetstat.1
-./usr/share/man/man1/phone.1
 ./usr/share/man/man1/dnsubmit.1
